base/traefik/manifests/traefik-k8s-dashboard.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-k8s-dashboard
  namespace: kube-system
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.k8s.internal`)
      services:
        - name: api@internal
          kind: TraefikService
